fix: don't wrap codeblock

--- a/fe/src/assets/css/content-theme.css
+++ b/fe/src/assets/css/content-theme.css
@@ -403,7 +403,7 @@
   text-align: left;
   direction: ltr;
   tab-size: 4;
-  white-space: pre-wrap;
+  overflow-y: auto;
   font-style: normal;
 }
 /* ckeditor5-code-block/theme/codeblock.css */
